# portable-harness

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.codex/: config.toml
bench/: __init__.py  _api_quality_hurl_ab.py  _astgrep_ab.py  _cm_ab.py  _cm_probe.py  _cm_search_ab.py  _compress_ab.py  _headroom_stack_ab.py  _icm_graph.py  _icm_recall.py  _quality_gate_output.py  _reflection_ab.py  _session_replay.py  mcp_tax.py  run_dc.py
bundle/: AGENTS.md  mcp.json
docs/: ARCHITECTURE.md  BENCH.md  BUNDLE-COVERAGE-GAPS-2026-06-28.md  BUNDLE-INIT-STRATEGY.md  BUNDLE.md  CATALOG-DEEP-VET-2026-06-25.md  CLAUDES-SKILL-USAGE-PROBLEM.md  CODING-HARNESS-CANDIDATES-2026-06-28.md  ECC-INTEGRATION-LEDGER.md  FOUNDATION-BENCH-2026-06-28.md  GATEGUARD-PROBLEMS.md  HANDOFF-DEEPSEEK-BUNDLE-FULL-PERFORMANCE.md  HANDOFF-DEEPSEEK-MEMORY-REPAIR-2026-06-29.md  HANDOFF.md  MEMORY-GOVERNANCE-NEXT-2026-06-29.md  MEMORY-PLAN.md  NO-DAEMON-BASELINE-BACKLOG.md  OPTIONAL-FOUNDATION-GAP-FILL-2026-06-28.md  PAW-CLI-WORKFLOW-DRAFT.md  PAW-NORTH-STAR.md  PUSH-PULL-SKILL-ROUTER-DRAFT.md  README.md  RECIPE-BUNDLE-RESEARCH-2026-06-28.md  RESEARCH-RADAR.md  SHARED-BRAIN.md  SKILL-ROUTER-RESEARCH.md  SMART-ROUTER.md  STATUS.md  WIRE-DECISION-MATRIX.md
paw/: __init__.py  __main__.py  blackboard.py  codebase_memory.py  command_mistakes.py  config.py  curate.py  doctor.py  linker.py  memory_governance.py  memory_hook.py  memory_mesh.py  memory_sink.py  mutation.py  recall.py  reflect_llm.py  reflection.py  repo_pack.py  router.py  router_block.py  semantic_router.py  skill_graph.py  skill_router.py  surface_audit.py  surface_context.py  team_adapters.py  team_kernel.py  verification.py  zcode.py
scripts/: migrate_paw_lessons.py
tests/: conftest.py  test_blackboard.py  test_catalog.py  test_confidence.py  (+36 more)
(+166 files in other folders)
